# rwa-risk-sentinel-casper

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  streamlit_app.py
.github/workflows/: ci.yml
agent/: .env.example  Dockerfile  requirements.txt
agent/app/: casper_client.py  main.py  models.py  risk_model.py
agent/tests/: test_casper_client.py  test_risk_model.py  test_uploads.py
contracts/: README.md
contracts/rwa_risk_registry/: Cargo.toml  Odra.toml
contracts/rwa_risk_registry/resources/casper_contract_schemas/: rwa_risk_registry_schema.json
contracts/rwa_risk_registry/resources/legacy/: rwa_risk_registry_schema.json
contracts/rwa_risk_registry/src/: lib.rs  main.rs
contracts/rwa_risk_registry/wasm/: RwaRiskRegistry.wasm
data/sample_signals/: carbon-credit-kenya-042.json  invoice-2026-001.json  real-estate-note-nyc-17.json
demo_assets/: invoice_demo.json
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DORAHACKS_SUBMISSION.md  FINAL_SUBMISSION_CHECKLIST.md  JUDGING_STRATEGY.md  PITCH.md  SUBMISSION_CHECKLIST.md  TESTNET_TRANSACTIONS.md  VIDEO_SCRIPT_FINAL.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  styles.css
mcp-server/: package.json
mcp-server/src/: index.ts
scripts/: codex_finalize_prompt.md  deploy_contract_placeholder.sh  record_streamlit_demo.js  run_demo_cycle.py  verify_real_testnet_publish.sh
x402-gateway/: README.md
