[package]
name = "rwa_risk_registry"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
odra = "1"

[dev-dependencies]
odra-test = "1"

[build-dependencies]
odra-build = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "1"

[[bin]]
name = "rwa_risk_registry_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "rwa_risk_registry_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
