[package]
name = "rwa_risk_registry"
version = "2.0.0"
authors = ["CasperAssociation <https://t.me/CSPRDevelopers>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "rwa_risk_registry"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "5.0.0"
casper-types = "6.0.0"
base64ct = "=1.7.2"
zeroize = "=1.8.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
